[project]
name = "worldometer-async"
version = "1.0.0"
description = "Get live, population, geography, projected, and historical data from around the world ðŸŒ"
authors = [
    {name = "HoPHNiDev",email = "hophniagent@gmail.com"}
]
license = {text = "MIT LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests-html (>=0.10.0,<0.11.0)",
    "lxml-html-clean (>=0.4.1,<0.5.0)",
    "pyppeteer (>=2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

